--- a/lesson26/index.html
+++ b/lesson26/index.html
@@ -28,7 +28,7 @@
                 <li><a href="https://www.google.com/" target="_blank">Гугл</a></li>
                 <li><a href="another.html">Ссылка</a></li>
                 <li><a href="#">Ссылка</a></li>
-                <li><a href="#" class="selected">Ссылка</a></li>
+                <li><a href="#" class="selected red super">Ссылка</a></li>
                 <li><a href="#" class="selected">Ссылка</a></li>
             </ul>
         </nav>
